--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             A produção é inteiramente artesanal, do preparo da argila à queima em alta temperatura. O resultado
             são objetos com presença, textura e identidade única.
           </p>
-          <a href="#processo" class="link-underlined">Conheça o processo de criação</a>
         </div>
 
       </div>
@@ -169,9 +168,8 @@
         </div>
 
         <div class="section__media reveal-right" style="--delay:0.1s;">
-          <div class="map-placeholder">
-            
-            <iframe class="localizacao__map"
+          <div class="localizacao__map">            
+            <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23591.59531781854!2d-44.978040084845446!3d-23.073165081864698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9d7ce47f825ea7%3A0xb0e1ed8f9db1d15a!2sCunha%2C%20SP%2C%2012530-000!5e1!3m2!1spt-BR!2sbr!4v1764124717664!5m2!1spt-BR!2sbr"
               width="1005" 
               height="450" 
@@ -180,7 +178,6 @@
               loading="lazy" 
               referrerpolicy="no-referrer-when-downgrade">
             </iframe>
-
           </div>
         </div>
 
@@ -191,10 +188,8 @@
     <section id="contato" class="section section--contato">
       <div class="container section__inner--centered">
 
-        <h2 class="section__title reveal-up">Visite ou entre em contato</h2>
-        <p class="section__subtitle reveal-up" style="--delay:0.1s;">
-          Atendimento por encomenda e visitas agendadas.
-        </p>
+        <h2 class="section__title reveal-up">Agende sua visita</h2>
+
 
         <a
           href="https://wa.me/5511999999999"
