--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
           href="https://wa.me/5511999999999"
           class="btn btn--primary btn--large reveal-up"
           style="--delay:0.2s;"
+          target="_blank"
         >
           WhatsApp – Falar com o ateliê
         </a>
