--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
           </article>
 
-          <article class="step reveal-up" style="--delay:0.1s;">
+          <article class="step reveal-right" style="--delay:0.1s;">
             <img src="assets/img/processo-02.png" alt="Torno de cerâmica" class="step__image">
             <h3 class="step__title">02 — Torno e modelagem</h3>
             <p class="step__text">
@@ -140,7 +140,7 @@
             </p>
           </article>
 
-          <article class="step reveal-right" style="--delay:0.2s;">
+          <article class="step reveal-left" style="--delay:0.2s;">
             <img src="assets/img/processo-03.png" alt="Forno cerâmico" class="step__image">
             <h3 class="step__title">03 — Queima e finalização</h3>
             <p class="step__text">
