--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
           <figure class="gallery__item reveal-up" style="--delay:0.25s;">
             <img src="assets/img/peca-06.png" alt="" class="gallery__image">
           </figure>
+          <figure class="gallery__item reveal-up" style="--delay:0.25s;">
+            <img src="assets/img/peca-07.png" alt="" class="gallery__image">
+          </figure>
+          <figure class="gallery__item reveal-up" style="--delay:0.25s;">
+            <img src="assets/img/peca-08.png" alt="" class="gallery__image">
+          </figure>
         </div>
 
       </div>
@@ -154,7 +160,7 @@
 
     <!-- LOCALIZAÇÃO -->
     <section id="localizacao" class="section">
-      <div class="container section__inner section__inner--two-columns">
+      <div class="localizacao__container">
 
         <div class="section__content reveal-left">
           <img src="assets/img/localizacao.png" alt="Estrada de terra entre montanhas" class="localizacao__image">
@@ -187,19 +193,13 @@
     <!-- CONTATO -->
     <section id="contato" class="section section--contato">
       <div class="container section__inner--centered">
-
         <h2 class="section__title reveal-up">Agende sua visita</h2>
-
-
-        <a
-          href="https://wa.me/5511999999999"
-          class="btn btn--primary btn--large reveal-up"
-          style="--delay:0.2s;"
-          target="_blank"
-        >
+        <a href="https://wa.me/5512999999999" class="btn btn--primary btn--large">
+          <svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" style="margin-right:8px">
+          <path d="M16.001 2.666c-7.363 0-13.334 5.97-13.334 13.334a13.2 13.2 0 0 0 1.946 6.822L2.667 29.334l6.712-1.973a13.31 13.31 0 0 0 6.622 1.766h.001c7.364 0 13.333-5.97 13.333-13.333s-5.969-13.334-13.334-13.334zm0 24.889h-.001a11.52 11.52 0 0 1-5.888-1.61l-.422-.25-3.982 1.17 1.21-3.878-.275-.399a11.53 11.53 0 0 1-1.793-6.168c0-6.364 5.169-11.533 11.533-11.533S27.534 9.166 27.534 15.53 22.365 27.555 16 27.555zm6.245-8.387c-.334-.167-1.972-.973-2.28-1.083-.308-.112-.533-.167-.758.166-.225.333-.867 1.083-1.064 1.308-.197.225-.392.25-.725.084-.334-.167-1.408-.517-2.684-1.647-.992-.884-1.66-1.974-1.854-2.307-.193-.334-.02-.515.146-.681.15-.151.334-.392.501-.588.168-.196.223-.333.334-.558.112-.225.056-.417-.028-.583-.083-.167-.758-1.83-1.04-2.505-.273-.655-.553-.568-.758-.578l-.65-.012c-.225 0-.588.083-.897.417-.308.333-1.177 1.15-1.177 2.808 0 1.659 1.206 3.266 1.375 3.491.168.225 2.374 3.63 5.754 4.922.805.347 1.433.554 1.922.708.807.257 1.543.221 2.124.134.649-.097 1.972-.806 2.251-1.585.279-.78.279-1.45.195-1.585-.083-.134-.308-.216-.641-.384z"/>
+          </svg>
           WhatsApp – Falar com o ateliê
         </a>
-
       </div>
     </section>
 
