--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li><a href="#sobre" class="nav__link">Sobre</a></li>
           <li><a href="#galeria" class="nav__link">Galeria</a></li>
           <li><a href="#processo" class="nav__link">Processo</a></li>
+          <li><a href="#localizacao" class="nav__link">Localização</a></li>
           <li><a href="#contato" class="nav__link">Contato</a></li>
         </ul>
       </nav>
@@ -58,7 +59,7 @@
 
         <div class="section__media">
           <img
-            src="assets/img/sobre.png"
+            src="assets/img/sobre.webp"
             alt="Peças de cerâmica artesanais"
             class="section__image reveal-left"
           >
@@ -92,28 +93,28 @@
 
         <div class="gallery">
           <figure class="gallery__item reveal-up" style="--delay:0.0s;">
-            <img src="assets/img/peca-01.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-01.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.05s;">
-            <img src="assets/img/peca-02.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-02.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.1s;">
-            <img src="assets/img/peca-03.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-03.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.15s%;">
-            <img src="assets/img/peca-04.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-04.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.2s;">
-            <img src="assets/img/peca-05.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-05.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.25s;">
-            <img src="assets/img/peca-06.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-06.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.25s;">
-            <img src="assets/img/peca-07.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-07.webp" alt="" class="gallery__image">
           </figure>
           <figure class="gallery__item reveal-up" style="--delay:0.25s;">
-            <img src="assets/img/peca-08.png" alt="" class="gallery__image">
+            <img src="assets/img/peca-08.webp" alt="" class="gallery__image">
           </figure>
         </div>
 
@@ -131,7 +132,7 @@
 
         <div class="steps">
           <article class="step reveal-left" style="--delay:0.0s;">
-            <img src="assets/img/processo-01.png" alt="Argila natural" class="step__image">
+            <img src="assets/img/processo-01.webp" alt="Argila natural" class="step__image">
             <h3 class="step__title">01 — A argila</h3>
             <p class="step__text">
               Seleção de argilas naturais com textura fina e tons terrosos característicos da região.
@@ -139,7 +140,7 @@
           </article>
 
           <article class="step reveal-right" style="--delay:0.1s;">
-            <img src="assets/img/processo-02.png" alt="Torno de cerâmica" class="step__image">
+            <img src="assets/img/processo-02.webp" alt="Torno de cerâmica" class="step__image">
             <h3 class="step__title">02 — Torno e modelagem</h3>
             <p class="step__text">
               As peças ganham forma lentamente, respeitando ritmo e gesto. Imperfeições são parte da linguagem.
@@ -147,7 +148,7 @@
           </article>
 
           <article class="step reveal-left" style="--delay:0.2s;">
-            <img src="assets/img/processo-03.png" alt="Forno cerâmico" class="step__image">
+            <img src="assets/img/processo-03.webp" alt="Forno cerâmico" class="step__image">
             <h3 class="step__title">03 — Queima e finalização</h3>
             <p class="step__text">
               No forno, a argila se transforma. Manchas e nuances surgem de forma natural e imprevisível.
@@ -163,7 +164,7 @@
       <div class="localizacao__container">
 
         <div class="section__content reveal-left">
-          <img src="assets/img/localizacao.png" alt="Estrada de terra entre montanhas" class="localizacao__image">
+          <img src="assets/img/localizacao.webp" alt="Estrada de terra entre montanhas" class="localizacao__image">
           <h2 class="section__title">Cunha, São Paulo</h2>
           <p class="section__text">
             Entre montanhas e neblina, Cunha é um dos principais polos de cerâmica artística do Brasil.
