feat: add favicon and manifest integration

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <meta property="og:image" content="assets/img/og-image.webp">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://rdgcz.github.io/atelie-neblina-e-barro/">
-  <link rel="icon" type="image/png" href="assets/favicon/favicon-32.png">
-  <link rel="apple-touch-icon" href="assets/favicon/favicon-180.png">
-  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+  <link rel="shortcut icon" href="assets/img/favicon/favicon.ico">
+  <meta name="theme-color" content="#f4f0eb">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="main.js" defer></script>
